# nanopore-event-detector

./: .gitignore  .pypirc  .readthedocs.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup_docs.sh
.github/workflows/: python-package.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  contributing.rst  examples.rst  index.rst  installation.rst  quickstart.rst
docs/source/api/: config.rst  detector.rst  processors.rst  utils.rst
examples/: basic_usage.py
src/nanopore_detector/: detector.py
src/nanopore_detector/config/: config.py
src/nanopore_detector/processors/: event_processor.py  filter_processor.py  signal_processor.py
src/nanopore_detector/utils/: file_utils.py  signal_utils.py
test_env/: pyvenv.cfg
tests/: test_detector.py
