[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanopore-event-detector"
version = "0.1.0"
description = "A robust event detection system for nanopore signals"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "pyabf>=2.3.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.18.0",
    "nbsphinx>=0.8.9",
    "ipykernel>=6.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true