[metadata]
name = nanopore-event-detector
version = 0.1.0
author = Faceless Void
author_email = mxs2361@mavs.uta.edu
description = A robust event detection system for nanopore signals
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/facevoid/nanopore-event-detector
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
